// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module: Send send transactions should send an IBC transaction 1`] = `
Array [
  Array [
    "zone/address",
    Object {
      "account_number": 123,
      "amount": Array [
        Object {
          "amount": 123,
          "denom": "mycoin",
        },
      ],
      "chain_id": "test-chain",
      "gas": "500000",
      "name": "default",
      "password": "1234567890",
      "sequence": 2,
    },
  ],
]
`;

exports[`Module: Send send transactions should send from wallet 1`] = `
Array [
  Array [
    "mock_address",
    Object {
      "account_number": 123,
      "amount": Array [
        Object {
          "amount": 123,
          "denom": "mycoin",
        },
      ],
      "chain_id": "test-chain",
      "gas": "500000",
      "name": "default",
      "password": "1234567890",
      "sequence": 1,
    },
  ],
]
`;
